Fixed some alignment issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,7 @@ main{
 }
 
 .starting{
-    margin: 40px;
+    margin-top: 30px;
     padding-top: 30px;
     text-align: center;
     width: 1140px;
